--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aboutMe.css">
+    <link rel="stylesheet" href="style/aboutMe.css">
     <title>About Me</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,5 +15,12 @@
         <a class = "Projects" href = "https://www.youtube.com/">Projects</a>
         <a class = "Resume" href = "https://www.youtube.com/">Resume</a>
     </div>
+
+    <div class = "description"> 
+        <h1 class = "name">Shreya Madhavan</h1>
+        <br>
+        <p id = "aboutMeParagraph">Hello, I am an aspiring UX designer seeking to expand my expertise! I specialize in website and mobile design, but am open to broader fields!</p>
+    </div>
+
 </body>
 </html>
