--- a/html/homePage.html
+++ b/html/homePage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/aboutMe.css">
+    <link rel="stylesheet" href="../style/homePage.css">
     <title>About Me</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,13 +12,13 @@
 </head>
 <body>
     <div class = "navigation">
-        <a class = "About Me" href = "https://www.youtube.com/">About Me</a>
+        <a class = "Home" href = "../html/homePage.html">Home</a>
+        <a class = "AboutMe" href = "https://www.youtube.com/">About Me</a>
         <a class = "Projects" href = "https://www.youtube.com/">Projects</a>
-        <a class = "Resume" href = "https://www.youtube.com/">Resume</a>
     </div>
 
-    <div class = "description">
-        <div class = "text"> 
+    <div class = "header">
+        <div class = "description"> 
             <h1>I'm Shreya Madhavan</h1>
             <p id = "aboutMeParagraph">An aspiring UX designer seeking to expand my expertise. <br> I specialize in website and mobile design, but am open to broader fields!</p>
         </div>
