added & styled footer, made nav bar sticky

--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/homePage.css">
-    <title>About Me</title>
+    <title>Main Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Belgrano&family=Bigshot+One&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class = "navigation">
-        <a class = "Home" href = "../index.html">Home</a>
+        <!-- add ul -->
+        <a class = "Home" href = "index.html">Home</a>
         <a class = "AboutMe" href = "https://www.youtube.com/">About Me</a>
         <a class = "Projects" href = "https://www.youtube.com/">Projects</a>
     </div>
 
-    <div class = "header">
+    <div class = "hero">
         <div class = "description"> 
-            <h1>I'm Shreya Madhavan</h1>
-            <p id = "aboutMeParagraph">An aspiring UX designer seeking to expand my expertise. <br> I specialize in website and mobile design, but am open to broader fields!</p>
+            <h>I'm Shreya Madhavan</h>
+            <p>An aspiring UX designer seeking to expand my expertise. <br> I specialize in website and mobile design, but am open to broader fields!</p>
         </div>
-        <img id = "profileImage" src = "images/Me.JPG" alt = "headshot">
+        <img src = "images/Me.JPG" alt = "headshot">
     </div>
 
     <div class = "projects">
-        <h1>Featured Projects</h1>
+        <h>Featured Projects</h>
         <p>Work in progress. Come back soon!</p>
     </div>
 
     <div class = "footer">
-        <p>WIP...</p>
+        <p>@Shreya Madhavan 2025</p> <!--Left side-->
+        <!-- Will be a button in the future -->
+        <div class = "icons">
+            <a href = "https://www.linkedin.com/in/shreya-madhavan-24354228b/" target="_blank">LinkedIn</a>
+            <a href = "mailto:shreyamadhavan47@gmail.com" target="_blank">Email</a>
+        </div>
     </div>
 </body>
 </html>
