added portfolio grid

--- a/index.html
+++ b/index.html
@@ -26,9 +26,25 @@
         <img src = "images/Me.JPG" alt = "headshot">
     </div>
 
+    <!-- Sketch out layout cause this sucks -->
     <div class = "projects">
         <h>Featured Projects</h>
         <p>Work in progress. Come back soon!</p>
+        <div class = "projectsGrid">
+            <!-- will make separate id later -->
+            <div class = "projectTile">
+                <p>Project</p>
+            </div>
+            <div class = "projectTile">
+                <p>Project</p>
+            </div>
+            <div class = "projectTile">
+                <p>Project</p>
+            </div>
+            <div class = "projectTile">
+                <p>Project</p>
+            </div>
+        </div>
     </div>
 
     <div class = "footer">
