added content to aboutMe page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Belgrano&family=Bigshot+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class = "navigation">
-        <!-- add ul -->
+    <ul class = "navigation">
         <a class = "Home" href = "index.html">Home</a>
-        <a class = "AboutMe" href = "https://www.youtube.com/">About Me</a>
-        <a class = "Projects" href = "https://www.youtube.com/">Projects</a>
-    </div>
+        <a class = "AboutMe" href = "aboutMe.html">About Me</a>
+        <a class = "Projects" href = "projects.html">Projects</a>
+    </ul>
 
     <div class = "hero">
         <div class = "description"> 
