--- a/aboutMe.html
+++ b/aboutMe.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class = "section2">
-        <div class = "skills">
+        <div class = "grid">
             <h>Skills</h>
             <ul>
                 <li>UX/UI Design</li>
@@ -34,7 +34,7 @@
                 <li>Graphic Design</li>
             </ul>
         </div>
-        <div class = "tools">
+        <div class = "grid">
             <h>Tools</h>
             <ul>
                 <li>Figma</li>
@@ -43,7 +43,7 @@
                 <li>CapCut</li>
             </ul>
         </div>
-        <div class = "interests">
+        <div class = "grid">
             <h>Interests</h>
             <ul>
                 <li>Drawing</li>
@@ -63,7 +63,7 @@
         </div>
         <div class = "job">
             <h1>Technovation</h1>
-            <h2> Business Lead and President</h2>
+            <h2> Business Lead & President</h2>
             <p>Aug 2022 - Apr 2024</p>
         </div>
         <div class = "job">
